--- a/UserManagementApp.Server/appsettings.json
+++ b/UserManagementApp.Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=BA_DB_SRV\\BAS_FTS;Initial Catalog=ADIB_FTS_ITT;Persist Security Info=True;User ID=FTS_USER;Password=password1#"
+    "DefaultConnection": "Your_Connection_String_Here"
   },
     "Logging": {
       "LogLevel": {
